client/src/pages/LoginPage/Login.css
.login-main-div {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    margin-top: 10vh;
    padding-bottom: 5vh;
    align-items: center;
    width: 100%;
    background-color: #404d72;
    color: #fff;
}

.login-logo {
    width: 30%;
    margin-bottom: 5vh;
    margin-top: 1vh;
}

.signup-container {
    width: 90%;
    display: grid;
    grid-template-columns: 50% 50%;
    border: 1px solid #fff;
}

.login-div,
.signup-div,
.survey-explanation-div {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 1%;
    margin: 0 auto;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.login-div {
    border: 1px solid #fff;
    width: 90%;
    margin-top: 2vh;
    /* margin-bottom: 5vh; */
}

.prize-container {
    border: 2px solid orange;
    padding: 1%;
}

.credentials-passed-login {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.login-btn,
.signup-btn,
.check-your-details-btn {
    background-color: rgb(57, 167, 57);
    border: none;
    color: #fff;
    width: 20%;
    padding: 1%;
    font-size: 1em;
    cursor: pointer;
    margin: 0 auto;
    margin-bottom: 1vh;
    margin-top: 1vh;
}

.sign-in-with-google-btn {
    background-color: rgb(57, 167, 57);
    border: none;
    color: #fff;
    width: 90%;
    padding: 1%;
    font-size: 1em;
    cursor: pointer;
    margin: 0 auto;
    margin-bottom: 1vh;
    margin-top: 1vh;
}

.login-btn:hover,
.signup-btn:hover,
.check-your-details-btn:hover,
.sign-in-with-google-btn:hover {
    background-color: rgb(104, 189, 104);
    transition: 0.2s ease;
}

.google-explainer {
    width: 75%;
    margin: 0 auto;
}

.error-message {
    text-align: center;
    color: red;
}

.text-message {
    color: rgb(100, 216, 100);
}

@media (max-width: 1000px) {
    .signup-container {
        grid-template-columns: 100%;
        row-gap: 2vh;
    }
}

@media (max-width: 700px) {
    .login-signup-container {
        display: flex;
        flex-direction: column;
    }
    .login-logo {
        width: 60%;
    }
    .form-title {
        font-size: 1.5em;
    }
    .login-div > h3,
    .signup-div > h3 {
        font-size: 0.9em;
    }
    .extra-text {
        text-align: center;
        margin-top: 1vh;
        margin-bottom: 1vh;
    }
}

